--- a/Index.html
+++ b/Index.html
@@ -21,15 +21,22 @@
 		</div>
 		<div class="clear"></div>
 	</div>
-	<div id="about" class="section">
-	</div>
-	<div id="portfolio" class="section">
-	</div>
-	<div id="resume" class="section">
-	</div>
-	<div id="contact" class="section">
-	</div>
-	<div id="footer" class="section">
+	<div class="content">
+		<div id="about" class="section">
+			<div class="section-content">
+				<h1>About Me</h1>
+				<p>I am a front-end developer and artist based in NYC. I currently work at L2, a company that benchmarks the digital competence of brands, and I specialize in web application building and data visualization. In the past I have also worked in animation and computer graphics industry.</p>
+				<p>During my free time I am an activist, attend concerts, travel and train in muay thai. You can also find me at various figure drawing classes around the city and hitting up the best ice cream spots in Brooklyn. To find me elsewhere on the web, check out my contact section.</p>
+			</div>
+		</div>
+		<div id="portfolio" class="section">
+		</div>
+		<div id="resume" class="section">
+		</div>
+		<div id="contact" class="section">
+		</div>
+		<div id="footer" class="section">
+		</div>
 	</div>
 </body>
 <footer>
