i need to git ignore this sass cache, oops

--- a/Index.html
+++ b/Index.html
@@ -26,12 +26,44 @@
 			<div class="section-content">
 				<h1>About Me</h1>
 				<p>I am a front-end developer and artist based in NYC. I currently work at L2, a company that benchmarks the digital competence of brands, and I specialize in web application building and data visualization. In the past I have also worked in animation and computer graphics industry.</p>
-				<p>During my free time I am an activist, attend concerts, travel and train in muay thai. You can also find me at various figure drawing classes around the city and hitting up the best ice cream spots in Brooklyn. To find me elsewhere on the web, check out my contact section.</p>
+				<p>During my free time I am an activist, attend concerts, travel and train in muay thai. I often hit up various figure drawing classes around the city and frequent the best ice cream spots in Brooklyn. To find me elsewhere on the web, check out my contact section.</p>
 			</div>
 		</div>
 		<div id="portfolio" class="section">
+			<div class="section-content">
+			</div>
 		</div>
 		<div id="resume" class="section">
+			<div class="section-content">
+				<div class="section-header">Work Experience</div>
+				<div class="single-job">
+					L2, New York, NY
+					Front-End Developer
+					January 2015 - Present
+				</div>
+				<div class="single-job">
+					Blackstone, New York, 
+					Software Engineer
+					July 2012 - January 2015
+				</div>
+				<div class="single-job">
+					DreamWorks Animation
+					Animation Technology Intern, Glendale, CA
+					June 2011 - March 2013
+					Quality Assurance Intern, Redwood City, CA
+					June 2010 - August 2010
+				</div>
+				<div class="single-job">
+					Vitale Digital Media Lab, Philadelphia, PA
+					Lab Consultant
+					September 2011 - June 2012
+				</div>
+				<div class="single-job">
+					Y-Not Radio, Philadelphia, PA
+					DJ
+					January 2011 - June 2012
+				</div>
+			</div>
 		</div>
 		<div id="contact" class="section">
 		</div>
